--- a/templates/overview.tmpl
+++ b/templates/overview.tmpl
@@ -24,7 +24,7 @@
         {{range .O}}
         <tr>
             <td>
-                <a href="/c/{{.Chat.ChatId}}">{{.Chat.ChatName}}</a>
+                <a href="/h/{{.Chat.ChatId}}">{{.Chat.ChatName}}</a>
             </td>
             <td>
                 <span class="badge bg-secondary">{{.CountTotal}}</span>
