view single message, chat history grouping by album and link to single message

--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -16,6 +16,7 @@
                         <li><a class="dropdown-item" href="/o">Overview</a></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item" href="/h">Chat history</a></li>
+                        <li><a class="dropdown-item" href="/m">Single message</a></li>
                         <li><a class="dropdown-item" href="/e">Edited message</a></li>
                         <li><a class="dropdown-item" href="/d">Deleted message</a></li>
                         <li><a class="dropdown-item" href="/f">File</a></li>
