--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -14,6 +14,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/j">Journal</a></li>
                         <li><a class="dropdown-item" href="/o">Overview</a></li>
+                        <li><a class="dropdown-item" href="/l">Chats list</a></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item" href="/h">Chat history</a></li>
                         <li><a class="dropdown-item" href="/m">Single message</a></li>
