--- a/templates/chatlist.tmpl
+++ b/templates/chatlist.tmpl
@@ -2,7 +2,7 @@
 <div class="row">
     <ul class="list-group list-group-flush">
         {{range .Chats}}
-        <li class="list-group-item">{{.ChatName}}</li>
+        <li class="list-group-item"><a href="/h/{{.ChatId}}">{{.ChatName}}</a></li>
         {{end}}
     </ul>
 </div>
