--- a/templates/chatlist.tmpl
+++ b/templates/chatlist.tmpl
@@ -1,6 +1,14 @@
 {{define "main"}}
 <div class="row">
     <ul class="list-group list-group-flush">
+        {{range .ChatFolders}}
+        <li class="list-group-item"><a href="/l?folder={{.Id}}">{{.Title}}</a></li>
+        {{end}}
+    </ul>
+</div>
+<hr>
+<div class="row">
+    <ul class="list-group list-group-flush">
         {{range .Chats}}
         <li class="list-group-item"><a href="/h/{{.ChatId}}">{{.ChatName}}</a></li>
         {{end}}
