--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -8,8 +8,10 @@
 </head>
 <body>
 <div class="container-fluid">
-{{template "navbar"}}
-{{template "main" .}}
+    {{template "navbar"}}
+    <div class="m-2">
+        {{template "main" .}}
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
