--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -17,6 +17,7 @@
                         <li><a class="dropdown-item" href="/l">Chats list</a></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item" href="/h">Chat history</a></li>
+                        <li><a class="dropdown-item" href="/p">TDLib options</a></li>
                         <li><a class="dropdown-item" href="/m">Single message</a></li>
                         <li><a class="dropdown-item" href="/e">Edited message</a></li>
                         <li><a class="dropdown-item" href="/d">Deleted message</a></li>
