add tdlib options view

--- a/templates/tdlibOptions.tmpl
+++ b/templates/tdlibOptions.tmpl
@@ -23,7 +23,7 @@
                 <code>{{.Value}}</code>
             </td>
             <td>
-                {{.Description}}
+                {{.Description | safeHTML}}
             </td>
         </tr>
         {{end}}
