--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -13,11 +13,12 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/j">Journal</a></li>
-                        <li><a class="dropdown-item" href="/o">Overview</a></li>
                         <li><a class="dropdown-item" href="/l">Chats list</a></li>
+                        <li><a class="dropdown-item" href="/p">TDLib options</a></li>
+                        <li><a class="dropdown-item" href="/o">Overview (deprecated)</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item" href="/h">Chat history</a></li>
-                        <li><a class="dropdown-item" href="/p">TDLib options</a></li>
                         <li><a class="dropdown-item" href="/m">Single message</a></li>
                         <li><a class="dropdown-item" href="/e">Edited message</a></li>
                         <li><a class="dropdown-item" href="/d">Deleted message</a></li>
