add active sessions list

--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -14,7 +14,8 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/j">Journal</a></li>
                         <li><a class="dropdown-item" href="/l">Chats list</a></li>
-                        <li><a class="dropdown-item" href="/p">TDLib options</a></li>
+                        <li><a class="dropdown-item" href="/to">TDLib options</a></li>
+                        <li><a class="dropdown-item" href="/as">Active sessions</a></li>
                         <li><a class="dropdown-item" href="/o">Overview (deprecated)</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
