--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -28,6 +28,11 @@
                 </li>
             </ul>
         </div>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="?a=1">DEBUG</a>
+            </li>
+        </ul>
     </div>
 </nav>
 {{end}}
