--- a/templates/single_message.tmpl
+++ b/templates/single_message.tmpl
@@ -1,18 +1,5 @@
 {{define "main"}}
-<div class="col">
-    {{if .FormattedText}}
-        {{.FormattedText | renderText}}
-    {{end}}
-    {{if .SimpleText}}
-        {{.SimpleText}}
-    {{end}}
-
-
-    {{$attachmentsCount := .Attachments | len}}
-    {{if gt $attachmentsCount 0}}
-        {{range .Attachments}}
-            <a href="/f/{{.Id}}"><img src="data:image/png;base64, {{.Thumb}}" alt=""/></a>
-        {{end}}
-    {{end}}
+<div class="col col-6">
+    {{template "message" dict "parent" .Message "chat" .Chat "needHeader" true "needSender" true  "needFooter" true}}
 </div>
 {{end}}
