--- a/templates/message.tmpl
+++ b/templates/message.tmpl
@@ -1,13 +1,33 @@
 {{define "message"}}
+    {{if eq .needPrevFooter true}}
+        </div></div></div>
+    {{end}}
+
+    {{$flexRow := ""}}
+    {{$borderColor := ""}}
+    {{$cardWidth := 100}}
+    {{$realNeedSender := false}}
+
     {{if eq .needHeader true}}
         {{if eq .chat.Type "User"}}
-            <li class="list-group-item {{if isMe .parent.SenderId}}list-group-item-secondary{{else}}{{end}}">
+            {{if isMe .parent.SenderId}}{{$flexRow = "flex-row-reverse"}}{{else}}{{$flexRow = "flex-row"}}{{end}}
+            {{if isMe .parent.SenderId}}{{$borderColor = "border-secondary"}}{{else}}{{$borderColor = "border-primary"}}{{end}}
+            {{$cardWidth = 40}}
         {{else}}
-            <li class="list-group-item">
+            {{$flexRow = "flex-row"}}
+            {{$borderColor = ""}}
+            {{$cardWidth = 75}}
             {{if eq .needSender true}}
-                <a href="/c/{{.parent.SenderId}}">{{.parent.SenderName}}</a><br>
+                {{$realNeedSender = true}}
             {{end}}
         {{end}}
+        <div class="d-flex {{$flexRow}} my-2">
+        <div class="card border {{$borderColor}}" style="max-width: 50%;">
+        <div class="card-body">
+    {{end}}
+
+    {{if eq $realNeedSender true}}
+            <h6 class="card-subtitle mb-2 text-muted"><a href="/c/{{.parent.SenderId}}">{{.parent.SenderName}}</a></h6>
     {{end}}
 
     {{if .parent.FormattedText}}
@@ -19,27 +39,22 @@
 
     {{$attachmentsCount := .parent.Attachments | len}}
     {{if gt $attachmentsCount 0}}
-        {{if eq .needHeader true}}<br>{{end}}
+        {{if eq .needHeader true}}{{if eq .parent.FormattedText nil}}<br>{{end}}{{end}}
         {{range .parent.Attachments}}
-            <a href="/f/{{.Id}}">
-                {{if .Thumb}}
-                    <img src="data:image/png;base64, {{.Thumb}}" title="{{.T}}" alt=""/>
-                {{else}}
-                    link
-                {{end}}
-            </a>
+            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.T}}" alt=""/>{{else}}link{{end}}</a>
         {{end}}
     {{end}}
 
     {{if eq .needHeader true}}
-        <small>
-            <span class="float-end" title="{{.parent.DateTimeStr}}">
+        <br>
+        <small class="float-end">
+            <span title="{{.parent.DateTimeStr}}">
                 <a class="link-secondary" href="/m/{{.chat.ChatId}}/{{.parent.MessageId}}">{{.parent.TimeStr}}</a>
             </span>
         </small>
     {{end}}
 
     {{if eq .needFooter true}}
-        </li>
+            </div></div></div>
     {{end}}
 {{end}}
