--- a/templates/message.tmpl
+++ b/templates/message.tmpl
@@ -10,9 +10,9 @@
 
     {{if eq .needHeader true}}
         {{if eq .chat.Type "User"}}
-            {{if isMe .parent.SenderId}}{{$flexRow = "flex-row-reverse"}}{{else}}{{$flexRow = "flex-row"}}{{end}}
+            {{if isMe .parent.SenderId}}{{$flexRow = "flex-row"}}{{else}}{{$flexRow = "flex-row-reverse"}}{{end}}
             {{if isMe .parent.SenderId}}{{$borderColor = "border-secondary"}}{{else}}{{$borderColor = "border-primary"}}{{end}}
-            {{$cardWidth = 40}}
+            {{$cardWidth = 45}}
         {{else}}
             {{$flexRow = "flex-row"}}
             {{$borderColor = ""}}
@@ -22,16 +22,20 @@
             {{end}}
         {{end}}
         <div class="d-flex {{$flexRow}} my-2">
-        <div class="card border {{$borderColor}}" style="max-width: 50%;">
-        <div class="card-body">
+        <div class="card border {{$borderColor}}" style="max-width: {{$cardWidth}}%; min-width: 10%;">
+        <div class="card-body p-1">
     {{end}}
 
     {{if eq $realNeedSender true}}
             <h6 class="card-subtitle mb-2 text-muted"><a href="/c/{{.parent.SenderId}}">{{.parent.SenderName}}</a></h6>
     {{end}}
 
+    {{$rendered := ""}}
     {{if .parent.FormattedText}}
-        {{.parent.FormattedText | renderText}}
+        {{$rendered := .parent.FormattedText | renderText}}
+        {{if $rendered}}
+            {{$rendered}}<br>
+        {{end}}
     {{end}}
     {{if .parent.SimpleText}}
         {{.parent.SimpleText}}
@@ -39,19 +43,18 @@
 
     {{$attachmentsCount := .parent.Attachments | len}}
     {{if gt $attachmentsCount 0}}
-        {{if eq .needHeader true}}{{if eq .parent.FormattedText nil}}<br>{{end}}{{end}}
+        {{if eq .needHeader true}}{{if ne $rendered ""}}<br>{{end}}{{end}}
         {{range .parent.Attachments}}
-            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.T}}" alt=""/>{{else}}link{{end}}</a>
+            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.T}}" alt=""/>{{else if .Name}}File: {{.Name}}{{else}}link{{end}}</a>
         {{end}}
     {{end}}
 
     {{if eq .needHeader true}}
-        <br>
-        <small class="float-end">
+        <div class="align-bottom text-end fw-lighter small float-end">
             <span title="{{.parent.DateTimeStr}}">
                 <a class="link-secondary" href="/m/{{.chat.ChatId}}/{{.parent.MessageId}}">{{.parent.TimeStr}}</a>
             </span>
-        </small>
+        </div>
     {{end}}
 
     {{if eq .needFooter true}}
