--- a/templates/single_message.tmpl
+++ b/templates/single_message.tmpl
@@ -1,7 +1,7 @@
 {{define "main"}}
 <div class="col col-6">
    <ul class="list-group">
-       {{template "message" dict "parent" .Message "chat" .Chat "needHeader" true "needSender" true  "needFooter" true}}
+       {{template "message" dict "parent" .Message "chat" .Chat "needHeader" true "needSender" true  "needFooter" true "needPrevFooter" false}}
    </ul>
 </div>
 {{end}}
