--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -16,10 +16,10 @@
                         <li><a class="dropdown-item" href="/l">Chats list</a></li>
                         <li><a class="dropdown-item" href="/to">TDLib options</a></li>
                         <li><a class="dropdown-item" href="/as">Active sessions</a></li>
+                        <li><a class="dropdown-item" href="/h">Saved messages</a></li>
                         <li><a class="dropdown-item" href="/o">Overview (deprecated)</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
-                        <li><a class="dropdown-item" href="/h">Chat history</a></li>
                         <li><a class="dropdown-item" href="/m">Single message</a></li>
                         <li><a class="dropdown-item" href="/e">Edited message</a></li>
                         <li><a class="dropdown-item" href="/d">Deleted message</a></li>
