--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -21,6 +21,8 @@
                         <li><a class="dropdown-item" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item" href="/m">Single message</a></li>
                         <li><a class="dropdown-item" href="/f">File</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/s">Settings</a></li>
                     </ul>
                 </li>
             </ul>
