--- a/templates/settings.tmpl
+++ b/templates/settings.tmpl
@@ -2,7 +2,7 @@
 <div class="col">
     <form method="post">
     <div class="row">
-            <div class="col-3">
+            <div class="col-3 mx-3">
                 <h4>Ignore chats</h4>
                 <table class="table table-sm" id="ignoreChatsTable">
                     <thead class="">
@@ -48,7 +48,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-3">
+            <div class="col-3 mx-3">
                 <h4>Ignore authors</h4>
                 <table class="table table-sm" id="ignoreUsersTable">
                     <thead class="">
@@ -94,7 +94,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-2">
+            <div class="col-2 mx-3">
                 <h4>Ignore folders</h4>
                 <table class="table table-sm" id="ignoreFoldersTable">
                     <thead class="">
