post-data parsing; get rid of php-style forms

--- a/templates/settings.tmpl
+++ b/templates/settings.tmpl
@@ -25,7 +25,7 @@
                                 </td>
                                 <td>
                                     <label>
-                                        <input type="text" name="ignoreChatIds[]" value="{{$chat.ChatId}}" readonly>
+                                        <input type="text" name="ignoreChatIds" value="{{$chat.ChatId}}" readonly>
                                     </label>
                                 </td>
                                 <td>
@@ -38,7 +38,7 @@
                             </td>
                             <td>
                                 <label>
-                                    <input type="text" name="ignoreChatIds[]" value="" placeholder="(add new)">
+                                    <input type="text" name="ignoreChatIds" value="" placeholder="(add new)">
                                 </label>
                             </td>
                             <td>
@@ -71,7 +71,7 @@
                                 </td>
                                 <td>
                                     <label>
-                                        <input type="text" name="ignoreAuthorIds[]" value="{{$chat.ChatId}}" readonly>
+                                        <input type="text" name="ignoreAuthorIds" value="{{$chat.ChatId}}" readonly>
                                     </label>
                                 </td>
                                 <td>
@@ -84,7 +84,7 @@
                             </td>
                             <td>
                                 <label>
-                                    <input type="text" name="ignoreAuthorIds[]" value="" placeholder="(add new)">
+                                    <input type="text" name="ignoreAuthorIds" value="" placeholder="(add new)">
                                 </label>
                             </td>
                             <td>
@@ -110,7 +110,7 @@
                             <tr>
                                 <td>
                                     <label>
-                                        <input type="text" name="ignoreFolders[]" value="{{$folder}}" readonly>
+                                        <input type="text" name="ignoreFolders" value="{{$folder}}" readonly>
                                     </label>
                                 </td>
                                 <td>
@@ -121,7 +121,7 @@
                         <tr>
                             <td>
                                 <label>
-                                    <input type="text" name="ignoreFolders[]" value="" placeholder="(add new)">
+                                    <input type="text" name="ignoreFolders" value="" placeholder="(add new)">
                                 </label>
                             </td>
                             <td>
