--- a/templates/navbar.tmpl
+++ b/templates/navbar.tmpl
@@ -18,26 +18,30 @@
                         <li><a class="dropdown-item" href="/as">Active sessions</a></li>
                         <li><a class="dropdown-item" href="/h">Saved messages</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/c">Chat info</a></li>
-                        <li><a class="dropdown-item" href="/m">Single message</a></li>
-                        <li><a class="dropdown-item" href="/f">File</a></li>
+                        <li><a class="dropdown-item disabled" href="/c">Chat info</a></li>
+                        <li><a class="dropdown-item disabled" href="/m">Single message</a></li>
+                        <li><a class="dropdown-item disabled" href="/f">File</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/s">Settings</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
-        <form class="d-flex" method="post">
+        <div class="d-flex">
             <div class="input-group">
                 <span class="input-group-text" id="phone-icon"><a href="/new" class="text-decoration-none">📞</a></span>
                 <label for="acc"></label>
                 <select class="form-select me-2" id="acc" name="acc" aria-describedby="phone-icon" onchange="changePhone(this);">
+                    {{$sel := false}}
                     {{range accountsList}}
-                        <option value="{{.Id}}" {{if isCurrentAcc .Id}}selected{{end}}>{{.Phone}}</option>
+                        <option value="{{.Id}}" {{if isCurrentAcc .Id}} {{$sel = true}} selected{{end}}>{{.Phone}}</option>
+                    {{end}}
+                    {{if eq $sel false}}
+                        <option value=""selected></option>
                     {{end}}
                 </select>
             </div>
-        </form>
+        </div>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="?a=1">DEBUG</a>
