--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{.T}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+        .spoiler{
+            background-color: gray;
+            color: transparent;
+        }
+        .spoiler:hover{
+            background-color: lightgray;
+            color: inherit;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid">
