--- a/templates/message.tmpl
+++ b/templates/message.tmpl
@@ -56,12 +56,13 @@
     {{if gt $attachmentsCount 0}}
         {{if eq .needHeader true}}{{if ne $rendered ""}}<br>{{end}}{{end}}
         {{range .parent.Attachments}}
-            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.T}}" alt=""/>{{else if .Name}}{{.Name}}{{else}}link{{end}}</a>
+            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.Name}}" alt=""/>{{else if .Name}}{{.Name}}{{else}}link{{end}}</a>
         {{end}}
     {{end}}
 
     {{if eq .needHeader true}}
-        <div class="align-bottom text-end fw-lighter small float-end">
+        <br>
+        <div class="align-bottom text-end fw-lighter small position-absolute bottom-0 end-0">
             {{if .parent.Edited}}📝{{end}}
             <span title="{{.parent.Date | DateTime}}">
                 <a class="link-secondary" href="/m/{{.chat.ChatId}}/{{.parent.MessageId}}">{{.parent.Date | Time}}</a>
