--- a/templates/navbar.gohtml
+++ b/templates/navbar.gohtml
@@ -17,12 +17,16 @@
                         <li><a class="dropdown-item" href="/to">TDLib options</a></li>
                         <li><a class="dropdown-item" href="/as">Active sessions</a></li>
                         <li><a class="dropdown-item" href="/h">Saved messages</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item disabled" href="/c">Chat info</a></li>
                         <li><a class="dropdown-item disabled" href="/m">Single message</a></li>
                         <li><a class="dropdown-item disabled" href="/f">File</a></li>
                         <li><a class="dropdown-item disabled" href="/li">Link info</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="/s">Settings</a></li>
                     </ul>
                 </li>
@@ -30,9 +34,7 @@
         </div>
         <form class="d-flex" action="/li">
             {{$activeLink := "link" | formValue}}
-            <input class="form-control" type="text" placeholder="Any link" aria-label="Any link" name="link"
-            {{if ne $activeLink ""}} value="{{$activeLink}}"{{end}}
-            >
+            <input class="form-control" type="text" size="30" placeholder="Any link" aria-label="Any link" name="link"{{if ne $activeLink ""}} value="{{$activeLink}}"{{end}}>
             <button class="btn btn-outline-secondary me-2 btn-sm" type="submit">Go</button>
         </form>
 
@@ -50,7 +52,7 @@
                         >{{.Phone}} {{.Username}}</option>
                     {{end}}
                     {{if eq $sel false}}
-                        <option value=""selected></option>
+                        <option value="" selected></option>
                     {{end}}
                 </select>
             </div>
