--- a/templates/message.gohtml
+++ b/templates/message.gohtml
@@ -45,23 +45,35 @@
     {{if .parent.FormattedText}}
         {{$rendered := .parent.FormattedText | renderText}}
         {{if $rendered}}
-            {{$rendered}}<br>
+            {{$rendered}}<br data-type="f1">
         {{end}}
     {{end}}
     {{if .parent.SimpleText}}
-        {{.parent.SimpleText}}
+        {{.parent.SimpleText}}<br data-type="s1">
     {{end}}
 
     {{$attachmentsCount := .parent.Attachments | len}}
     {{if gt $attachmentsCount 0}}
-        {{if eq .needHeader true}}{{if ne $rendered ""}}<br>{{end}}{{end}}
+        {{if eq .needHeader true}}{{if ne $rendered ""}}<br data-type="a1">{{end}}{{end}}
         {{range .parent.Attachments}}
-            <a href="/f/{{.Id}}">{{if .Thumb}}<img src="data:image/png;base64, {{.Thumb}}" title="{{.Name}}" alt=""/>{{else if .Name}}{{.Name}}{{else}}link{{end}}</a>
+            <a href="/f/{{.Id}}">
+                {{if .Thumb}}
+                    <img src="data:image/png;base64, {{.Thumb}}" title="{{.Name}}" alt=""/>
+                {{else if .ThumbLink}}
+                    <img src="{{.ThumbLink}}" title="{{.Name}}" alt=""/>
+                {{else if .Name}}
+                    {{.Name}}
+                {{else}}
+                    link
+                {{end}}
+            </a>
         {{end}}
     {{end}}
 
     {{if eq .needHeader true}}
-        <br>
+        {{if eq $attachmentsCount 0}}
+            <br>
+        {{end}}
         <div class="align-bottom text-end fw-lighter small position-absolute bottom-0 end-0">
             {{if .parent.Edited}}📝{{end}}
             <span title="{{.parent.Date | DateTime}}">
